--- a/views/propiedades/agregar-imagen.pug
+++ b/views/propiedades/agregar-imagen.pug
@@ -18,7 +18,7 @@ block contenido
 
 
                    
-            input(class="mt-5 w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold uppercase cursor-pointer" type="submit" value="Publicar propiedad")
+            button(id="publicar" class="mt-5 w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold uppercase cursor-pointer" type="button") Publicar propiedad
                 
 block scripts 
     script(src="/js/agregarImagen.js")
