--- a/views/propiedades/mostrar.pug
+++ b/views/propiedades/mostrar.pug
@@ -15,8 +15,8 @@ block contenido
             a(href="#" class="font-bold text-gray-600 text-sm") Categoria: 
                 span(class="font-normal")= propiedad.categoria.nombre
 
-        div(class="mt-5 md:flex md:gap-4")
-            div(class="md:w-2/3 bg-white shadow-lg") 
+        div(class="mt-5 md:flex md:gap-4 md:items-start")
+            div(class="md:w-2/3 bg-white shadow-lg rounded-lg") 
                 img(src=`/uploads/${propiedad.imagen}` alt=`Imagen de la propiedad ${propiedad.titulo}`)
 
                 div(class="px-5 py-10")
@@ -38,7 +38,7 @@ block contenido
                             span(class="text-gray-800 block text-lg")= propiedad.precio.nombre
 
 
-            div(class="md:w-1/3") 
+            aside(class="md:w-1/3 bg-white shadow-lg rounded-lg") 
                 h3(class="text-center py-10 leading-6 text-2xl font-bold text-gray-900") Ubicacion
 
                 div(class="h-96" id="mapa")
@@ -48,6 +48,14 @@ block contenido
                 div(class="p-5")
                     p(class="text-gray-600 font-bold text-xs") Direccion
                         span(id="calle" class="text-gray-800 block text-lg")= propiedad.calle
+                
+                    h3(class="text-2xl text-center my-10 font-extrabold text-gray-900") Vendedor
+                    if usuario
+                        p Puedes enviar mensaje 
+                    else 
+                        div(class="flex flex-col items-center justify-center gap-2")
+                            p(class="text-center") Si deseas contactar al vendedor 
+                            a(class="text-indigo-600" href="/auth/registro") debes crear una cuenta
 
 block scripts 
     script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
