--- a/views/propiedades/mostrar.pug
+++ b/views/propiedades/mostrar.pug
@@ -48,15 +48,32 @@ block contenido
                 div(class="p-5")
                     p(class="text-gray-600 font-bold text-xs") Direccion
                         span(id="calle" class="text-gray-800 block text-lg")= propiedad.calle
-                
-                    h3(class="text-2xl text-center my-10 font-extrabold text-gray-900") Vendedor
-                    if usuario
-                        p Puedes enviar mensaje 
-                    else 
-                        div(class="flex flex-col items-center justify-center gap-2")
-                            p(class="text-center") Si deseas contactar al vendedor 
-                            a(class="text-indigo-600" href="/auth/registro") debes crear una cuenta
+                    
+                    if !esVendedor  
+                        h3(class="text-2xl text-center my-10 font-extrabold text-gray-900") Vendedor
 
+                        if enviado 
+                            p(class="p-2 text-center bg-green-200 text-green-800 uppercase font-bold") Mensaje enviado correctamente
+
+                        else if usuario
+
+                            if errores 
+                                div(class="max-w-md mx-auto my-10")
+                                    each error in errores 
+                                        p.bg-red-600.text-white.uppercase.text.xs.text-center.p-2.mb-1.font-bold= error.msg
+
+                            form(method="POST")
+                                input(type="hidden" name="_csrf" value=csrfToken) 
+
+                                div(class="space-y-5")
+                                    label(form="mensaje") Mensaje
+                                    textarea(id="mensaje" name="mensaje" placeholder="Coloca tu mensaje aqui" class="w-full px-2 py-2 border border-gray-300 rounded-lg shadow placeholder-gray-600") 
+                                    input(type="submit" value="Enviar mensaje" class="bg-indigo-600 text-white font-bold uppercase text-sm w-full p-2 cursor-pointer")
+                        else 
+                            div(class="flex flex-col items-center justify-center gap-2")
+                                p(class="text-center") Si deseas contactar al vendedor 
+                                a(class="text-indigo-600" href="/auth/registro") debes crear una cuenta
+                    
 block scripts 
     script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
     script(src="/js/mostrarMapa.js")
