--- a/views/layout/includes/header-admin.pug
+++ b/views/layout/includes/header-admin.pug
@@ -7,4 +7,6 @@ header.bg-indigo-600.p-4
         nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hiddem") 
             a(href="/mis-propiedades") Mis propiedades
             a(href="") Mi perfil
-            a(class="bg-indigo-800 py-2 px-10 rounded-lg" href="") Cerrar sesion
+            form(action='/auth/cerrar-sesion' method="POST")
+                input(type="hidden" name="_csrf" value=csrfToken )
+                input(type="submit" class="bg-indigo-800 py-2 px-10 rounded-lg cursor-pointer" value="Cerrar sesion")
