--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -1,5 +1,8 @@
 extends ../layout/admin
 
+block styles 
+    meta(name="csrf-token" content= csrfToken)
+
 block contenido
     div.py-10
         h1.text-4xl.my-10.font-extrabold.text-center
@@ -32,8 +35,7 @@ block contenido
                                     a(href=`/mensajes/${propiedad.id}` class="text-sm text-gray-600")= `${propiedad.mensajes.length} Mensajes`
 
                                 div(class="sm:w-1/4 md:w-2/6 lg:flex-1 flex flex-col lg:flex-row gap-2 ") 
-                                    form(action='#')
-                                        input(type="submit" class=`w-full px-2 py-2 md:py-1 text-xs leading-5 font-semibold rounded cursor-pointer ${propiedad.publicado ? 'bg-green-100 text-green-800' : 'bg-yellow-100 text-yellow-800'} ` value=`${propiedad.publicado ? 'Publicado' : 'No publicado'}`)
+                                    button(type="button" data-propiedad-id = `${propiedad.id}` class=`cambiar-estado w-full px-2 py-2 md:py-1 text-xs leading-5 font-semibold rounded cursor-pointer ${propiedad.publicado ? 'bg-green-100 text-green-800' : 'bg-yellow-100 text-yellow-800'} `)= `${propiedad.publicado ? 'Publicado' : 'No publicado'}`
 
                                     a(href=`/propiedades/editar/${propiedad.id}` class=`text-center px-2 py-2 md:py-1 text-xs leading-5 font-semibold rounded cursor-pointer bg-indigo-100 text-indigo-800`) Editar
 
@@ -60,3 +62,6 @@ block contenido
 
         else 
             p.text-center.py-10.font-bold No hay propiedades
+
+block scripts
+    script(src="/js/cambiarEstado.js")
